--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,63 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
+:root {
+  --primary-color: #4d9386;
+  --home-color: #e6e6e6;
+  --dark-color: #333;
+  --shadow-color: rgba(0,0,0,0.45);
+  --light-color: #f2f2f2;
+  --danger-color: crimson;
+  --warning-color: orange;
+  --grey-color: #bfbfbf;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
+  line-height: 1.6;
+  background: var(--home-color);
+  color: var(--dark-color);
+}
+
+button {
+  margin: 3px;
+  padding: 6px 14px;
+  outline: none;
+  border: none;
+  border-radius: 2px;
+  box-shadow: 1px 1px 5px 0px var(--shadow-color);
+  cursor: pointer;
+
+  &:hover {
+    opacity: .9;
+    box-shadow: 1px 1px 2px 0px var(--shadow-color);
+  }
+
+  &:active {
+    opacity: .8;
+    box-shadow: 0px 0px 1px 0px var(--shadow-color);
+  }
+
+  &:disabled, &:disabled:hover, &:disabled:active {
+    cursor: not-allowed;
+    background-color: var(--grey-color);
+    box-shadow: none;
+    opacity: 1;
+  }
+}
+
+.btn-primary {
+  background-color: var(--primary-color);
+  color: var(--light-color);
+}
+
+.btn-danger {
+  background-color: var(--danger-color);
+}
+
