--- a/src/app/field/field.component.html
+++ b/src/app/field/field.component.html
@@ -1,6 +1,7 @@
-<button class="btn-primary" (click)="onChange()">Change</button>
-<ul>
-  <li *ngFor="let item of items; trackBy: trackHero">
-    {{ item.title }}
-  </li>
-</ul>
+<div class="container">
+
+  <div class="field">
+    <app-cell *ngFor="let i of fields"></app-cell>
+  </div>
+
+</div>
